# haskell-titan

./: .travis.yml  README.md
titan/: ChangeLog.md  titan.cabal
titan-debug-yampa/: ChangeLog.md  titan-debug-yampa.cabal
titan-debug-yampa/examples/: BouncingBall.hs  BouncingBallSF.hs
titan-debug-yampa/src/Data/: Extra.hs
titan-debug-yampa/src/FRP/Titan/Debug/: Comm.hs  CommTCP.hs  Command.hs  History.hs  Predicates.hs  Preferences.hs  SimMonad.hs  Yampa.hs
titan-gui/: titan-gui.cabal
titan-gui/data/: Interface.glade
titan-gui/examples/: .gitignore
titan-gui/src/: Auxiliary.hs  Controller.hs  IOBridge.hs  View.hs
titan-gui/src/Controller/: Conditions.hs
titan-gui/src/Controller/Conditions/: BtnStep.hs  Buttons.hs  CloseIDE.hs  CurFrameEdit.hs  CurFrameInfo.hs  TraceViewer.hs
titan-gui/src/FRP/Titan/: Protocol.hs
titan-gui/src/Model/: Model.hs
titan-gui/src/Model/ProtectedModel/: ProtectedFields.hs
titan-gui/src/Model/ReactiveModel/: ModelEvents.hs  ReactiveFields.hs
titan-gui/src/Paths/: CustomPaths.hs
titan-record-yampa/: ChangeLog.md  titan-record-yampa.cabal
titan-record-yampa/src/FRP/Titan/Record/: Yampa.hs
titan-yampa-bridge/: titan-yampa-bridge.cabal
titan-yampa-bridge/examples/: FRPGame.hs
titan-yampa-bridge/src/: ThemisCommBridge.hs  ThemisCommTCPBridge.hs  ThemisCore.hs
titan-yampa-bridge/src/FRP/Titan/Debug/: Comm.hs  CommTCP.hs  Core.hs
titan-yampa-debugger/: ChangeLog.md  titan-yampa-debugger.cabal
titan-yampa-debugger/examples/: .gitignore  BouncingBall.hs
titan-yampa-debugger/src/FRP/Titan/Debug/: CommTCP.hs  Core.hs  History.hs  Predicates.hs
titan-yampa-gui/: .gitignore  titan-yampa-gui.cabal
titan-yampa-gui/data/: Interface.glade
titan-yampa-gui/examples/: TestStreamChart.hs
titan-yampa-gui/src/: CombinedEnvironment.hs
titan-yampa-gui/src/Controller/Conditions/: BtnStep.hs  CurFrameEdit.hs  TraceViewer.hs
titan-yampa-gui/src/Graphics/UI/Gtk/: StreamChart.hs
titan-yampa-gui/src/Model/ProtectedModel/: ProtectedFields.hs
titan-yampa-gui/src/Paths/: CustomPaths.hs
titan-yampa-recorder/: ChangeLog.md  titan-yampa-recorder.cabal
titan-yampa-recorder/src/FRP/Titan/Record/: Yampa.hs
titan-yampa-recorder/src/FRP/Yampa/: Record.hs
titan/src/: CombinedEnvironment.hs  Controller.hs  IOBridge.hs  Main.hs  Paths.hs  View.hs
titan/src/Controller/: Conditions.hs
titan/src/Controller/Conditions/: Buttons.hs  CloseIDE.hs  CurFrameInfo.hs  TraceViewer.hs
titan/src/FRP/Titan/: Protocol.hs
titan/src/Graphics/UI/: View.hs
titan/src/Graphics/UI/Gtk/: GtkView.hs  StreamChart.hs
titan/src/Hails/Graphics/UI/Gtk/: Builder.hs  THBuilderAccessor.hs
titan/src/Hails/MVC/: DefaultGtkEnvironment.hs  GenericCombinedEnvironment.hs
titan/src/Hails/MVC/Model/: THFields.hs
titan/src/Hails/MVC/View/: DefaultView.hs  GladeView.hs  GtkView.hs
titan/src/Model/: Model.hs  ProtectedModel.hs  ReactiveModel.hs
titan/src/Model/ProtectedModel/: ProtectedFields.hs  ProtectedModelInternals.hs
titan/src/Model/ReactiveModel/: ModelEvents.hs  ReactiveFields.hs  ReactiveModelInternals.hs
titan/src/Paths/: CustomPaths.hs
titan/src/View/: Objects.hs
traces/: bouncingball.ytr  haskanoidtrace.ytr  quickcheckce.ytr
