cabal-version: >= 1.10
build-type:    Simple

name:          titan-record-yampa
version:       1.0.1
author:        Ivan Perez
maintainer:    ivan.perez@keera.co.uk
homepage:      http://github.com/keera-studios/haskell-titan
copyright:
  All Rights Reserved (c) 2018 - 2020 Keera Studios Ltd
  All Rights Reserved (c) 2015 - 2017 Ivan Perez Dominguez
license:       GPL-3
license-file:  LICENSE
category:      Testing
synopsis:      Testing Infrastructure for Temporal AbstractioNs - Yampa record-and-replay layer
description:
  Yampa debugger that allows you to run an FRP program and control its
  execution.
  .
  TITAN (Testing Infrastructure for Temporal AbstractioNs) is a framework to
  test and debug FRP programs. It allows you to write temporal unit tests, check
  them, QuickCheck them, run FRP programs with a fine-tuned debugger, obtain
  information to replicate tests, and follow and control the execution of a
  Yampa program from an interactive GUI.
  .
  This library provides a replacement function for Yampa's standard simulation
  function (@reactimate@), that enables recording input into a file and reading
  input from a file.

extra-source-files:
  ChangeLog.md

source-repository head
  type:     git
  location: git://github.com/keera-studios/haskell-titan.git

flag bearriver
  default: False
  manual:  True

library

  exposed-modules:
    FRP.Titan.Record.Yampa

  build-depends:
    base >= 4.8 && < 4.13

  hs-source-dirs:
    src/

  default-language:
    Haskell2010

  if flag(bearriver)
    build-depends:
      bearriver
  else
    build-depends:
      Yampa
