name:                titan-yampa-bridge
version:             0.1.0.0
synopsis:            Interactive Yampa debugger.
-- description:         
homepage:            http://keera.co.uk
license:             GPL-3
license-file:        LICENSE
author:              Ivan Perez
maintainer:          ivan.perez@keera.co.uk
-- copyright:           
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     FRP.Titan.Debug.Core
                       FRP.Titan.Debug.Comm
                       FRP.Titan.Debug.CommTCP
  build-depends:       base >=4.8 && < 4.11,
                       Yampa,
                       network
  hs-source-dirs:      src
  default-language:    Haskell2010
