name:                titan-yampa-debugger
version:             0.1.0.0
synopsis:            Testing Infrastructure for Temporal AbstractioNs - Interactive Yampa debugging layer.
description:
  Yampa debugger that allows you to run an FRP program and control its
  execution.
  .
  TITAN (Testing Infrastructure for Temporal AbstractioNs) is a framework to
  test and debug FRP programs. It allows you to write temporal unit tests, check
  them, QuickCheck them, run FRP programs with a fine-tuned debugger, obtain
  information to replicate tests, and follow and control the execution of a
  Yampa program from an interactive GUI.
  .
  This library provides a replacement function for Yampa's standard simulation
  function (@reactimate@), enabling debugging.
  .
  It also provides a definition of the standard communication interface with
  the debugging GUI, and a default implementation of a communication bridge
  suitable for standalone desktop applications using TCP sockets.
homepage:            http://keera.co.uk
license:             GPL-3
license-file:        LICENSE
author:              Ivan Perez
maintainer:          ivan.perez@keera.co.uk
-- copyright:           
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

flag examples
  default: False
  manual: True

library
  exposed-modules:     FRP.Titan.Debug.Core
                       FRP.Titan.Debug.Comm
                       FRP.Titan.Debug.CommTCP
  build-depends:       base >=4.7 && < 4.11,
                       Yampa,
                       network
  hs-source-dirs:      src
  default-language:    Haskell2010

executable titan-yampa-debugger-example-bouncing-ball
  main-is: BouncingBall.hs
  hs-source-dirs:  examples/
  ghc-options : -O3 -Wall -fno-warn-name-shadowing -rtsopts -threaded
  build-Depends: base < 5, SDL, SDL-gfx, Yampa, titan-yampa-debugger
  if !flag(examples)
    buildable: False

source-repository head
  type:     git
  location: git://github.com/keera-studios/haskell-titan.git
